compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:5:22: error: unresolved reference: foo
fun bar() = SubSub().foo()
                     ^
error: the following classes have incomplete hierarchies:
    test.Sub, unresolved: [Super]

COMPILATION_ERROR
